--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_username: matthewolckers
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://blog.matthewolckers.com" # the base hostname & protocol for your site
 
-google_analytics_id:
+google_analytics_id: UA-90020676-2
 
 # Build settings
 include: [_pages]
